--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "react-snowstorm": "0.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
